<resources>
    <string name="app_name">Events Scheduler</string>
    <string name="event_title_text">Event Title</string>
    <string name="event_location_text">Event Location</string>
    <string name="event_from_text">From</string>
    <string name="event_to_text">To</string>
    <string name="event_reminder_text">Reminder</string>
    <string name="menu_save">Save</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_search">Search</string>
    <string name="menu_clear">Clear</string>
</resources>
