<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ahmed.eventschedule.DetailsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/event_title_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/details_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="#444"
        android:textSize="16sp"
        android:textStyle="normal|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:paddingTop="15dp"
        android:text="@string/event_location_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic" />

    <TextView
        android:id="@+id/details_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="#444"
        android:textSize="16sp"
        android:textStyle="normal|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/event_from_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal|bold|italic" />

        <TextView
            android:id="@+id/details_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#444"
            android:textSize="16sp"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/details_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#444"
            android:textSize="16sp"
            android:textStyle="normal|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/event_to_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal|bold|italic" />

        <TextView
            android:id="@+id/details_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#444"
            android:textSize="16sp"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/details_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#444"
            android:textSize="16sp"
            android:textStyle="normal|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/event_reminder_text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="normal|bold|italic" />

        <TextView
            android:id="@+id/details_reminder_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#444"
            android:textSize="16sp"
            android:textStyle="normal|italic" />

        <TextView
            android:id="@+id/details_reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#444"
            android:textSize="16sp"
            android:textStyle="normal|italic" />
    </LinearLayout>
</LinearLayout>
